--- a/SalvareDateCV/app/src/main/res/layout/activity_ai_uitat_parola.xml
+++ b/SalvareDateCV/app/src/main/res/layout/activity_ai_uitat_parola.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimary"
-    tools:context="com.example.salvaredatecv.proiectandro.AiUitatParolaActivity">
+    tools:context="com.example.salvaredatecv.AiUitatParolaActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
