--- a/SalvareDateCV/app/src/main/res/layout/activity_login.xml
+++ b/SalvareDateCV/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
 
-    tools:context="com.example.salvaredatecv.proiectandro.LoginActivity">
+    tools:context="com.example.salvaredatecv.LoginActivity">
     <TextView
         android:text="@string/cv_manager"
         android:layout_width="wrap_content"
