--- a/SalvareDateCV/app/src/main/res/layout/activity_meniu.xml
+++ b/SalvareDateCV/app/src/main/res/layout/activity_meniu.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.salvaredatecv.proiectandro.MeniuActivity">
+    tools:context="com.example.salvaredatecv.MeniuActivity">
 
     <Button
         android:text="Adauga E-mail"
