--- a/SalvareDateCV/app/src/main/res/layout/activity_schimbare_parola.xml
+++ b/SalvareDateCV/app/src/main/res/layout/activity_schimbare_parola.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimary"
-    tools:context="com.example.salvaredatecv.proiectandro.SchimbareParola">
+    tools:context="com.example.salvaredatecv.SchimbareParola">
 
     <TextView
         android:text="@string/textView8_text"
