--- a/SalvareDateCV/app/src/main/res/layout/activity_sign_up.xml
+++ b/SalvareDateCV/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimary"
-    tools:context="com.example.salvaredatecv.proiectandro.SignUpActivity">
+    tools:context="com.example.salvaredatecv.SignUpActivity">
     <TextView
         android:text="Sign Up"
         android:layout_width="wrap_content"
